--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,9 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
- 
- 
-
 table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
@@ -19,4 +16,67 @@ td, th {
 
 tr:nth-child(even) {
   background-color: #dddddd;
+}
+
+.calculator {
+  width: 20rem;
+  height: 30rem;
+  background-color: lightcyan;
+  display: grid;
+  padding: 1%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  border: ridge;
+}
+
+.keys-numbers {
+  grid-area: keys-numbers;
+  direction: rtl;
+}
+
+.keys-numbers .key-zero {
+  width: 9.1rem;
+  text-align: left;
+  padding-left: 15%;
+}
+.keys-operators {
+  grid-area: keys-operators;
+}
+.keys-function {
+  grid-area: keys-function;
+}
+.calculator-keypad {
+  padding-top: 0.3rem;
+  background-color: rgb(9, 13, 41);
+  display: grid;
+  grid-template-columns: repeat(4, 5rem);
+  grid-template-rows: repeat(5, 5rem);
+  grid-template-areas: "keys-function keys-function keys-function keys-operators" "keys-numbers keys-numbers keys-numbers keys-operators" "keys-numbers keys-numbers keys-numbers keys-operators" "keys-numbers keys-numbers keys-numbers keys-operators" "keys-numbers keys-numbers keys-numbers keys-operators";
+}
+.calculator-input {
+  border-color: rgb(247, 247, 247);
+  border: ridge;
+  text-align: right;
+  padding-right: 10%;
+  font-weight: bold;
+  font-size: xx-large;
+}
+.result {
+  min-height: 3rem;
+  color: #666666;
+}
+
+button {
+  width: 4.2rem;
+  height: 4.2rem;
+  margin: 0.4rem;
+  color: white;
+  text-align: center;
+  font-size: 150%;
+  border-radius: 0.8rem;
+  box-shadow: 0.1rem 0.1rem 0.1rem 0.1rem grey;
 }
